--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -20,6 +20,9 @@ svg {
   .header_center_menu_btn {
     @apply focus-green relative h-[46px] flex-auto rounded-l-full text-sm text-[#6B7280] transition-colors duration-300 ease-in-out after:absolute after:right-0 after:h-[24px] after:w-[1px] after:bg-[#E5E7EB] hover:text-black focus-visible:rounded-full focus-visible:ring-offset-0;
   }
+  .focus-purple {
+    @apply focus:outline-none focus-visible:rounded-sm focus-visible:ring-2 focus-visible:ring-pink-600 focus-visible:ring-opacity-75 focus-visible:ring-offset-4 focus-visible:ring-offset-white;
+  }
 }
 
 .blue_btn {
