--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -58,6 +58,10 @@ svg {
   background-clip: text;
   text-fill-color: transparent;
 }
+.purple_gradient_bg_1 {
+  background: rgb(231, 21, 117);
+  background: linear-gradient(90deg, #e71575 -16.54%, #6f01f0 167.58%);
+}
 .purple_gradient_bg {
   background: rgb(231, 21, 117);
   background: linear-gradient(90deg, #e71575 -16.54%, #6f01f0 167.58%)
@@ -420,4 +424,11 @@ input:checked + .slider:before {
       object-fit: cover;
     }
   }
+}
+
+.slide {
+  margin-right: -10px !important ;
+}
+.slide:nth-child(4) {
+  margin-right: 150px !important;
 }
