design: Sidebar popups added. fix: Build error fixing from code.

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -23,7 +23,7 @@ svg {
     @apply focus-green relative h-[46px] flex-auto rounded-l-full text-sm text-[#6B7280] transition-colors duration-300 ease-in-out after:absolute after:right-0 after:h-[24px] after:w-[1px] after:bg-[#E5E7EB] hover:text-black focus-visible:rounded-full focus-visible:ring-offset-0;
   }
   .focus-purple {
-    @apply focus-visible:ring-pink-600 focus:outline-none focus-visible:rounded-sm focus-visible:ring-2 focus-visible:ring-opacity-75 focus-visible:ring-offset-4 focus-visible:ring-offset-white;
+    @apply focus:outline-none focus-visible:rounded-sm focus-visible:ring-2 focus-visible:ring-pink-600 focus-visible:ring-opacity-75 focus-visible:ring-offset-4 focus-visible:ring-offset-white;
   }
 }
 
@@ -232,6 +232,25 @@ svg {
 }
 .prime_pack_slider_thumb .swiper-slide-thumb-active {
   border-color: #76f4ba;
+}
+
+/* Home page css */
+.booking_calendar .react-datepicker__day {
+  font-size: 14px;
+  color: #313131;
+  height: 37px !important;
+}
+.booking_calendar .react-datepicker__day--in-range,
+.booking_calendar
+  .react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range) {
+  background-color: #f7f7f7;
+}
+.booking_calendar .react-datepicker__day--selected,
+.booking_calendar .react-datepicker__day--range-end,
+.booking_calendar .react-datepicker__day:hover {
+  color: #fff;
+  background-color: #313131 !important;
+  border-radius: 100%;
 }
 
 @media screen and (max-width: 1024px) {
