--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -31,10 +31,10 @@ svg {
   background: linear-gradient(90deg, #14a0cc 0%, #175aa9 100%);
 }
 .green_btn {
-  background: linear-gradient(90deg, #17a966 0%, #00cdac 100%);
+  background: linear-gradient(90deg, #e71575 0%, #00cdac 100%);
 }
 .green_btn_reverse {
-  background: linear-gradient(90deg, #00cdac 0%, #17a966 100%);
+  background: linear-gradient(90deg, #00cdac 0%, #e71575 100%);
 }
 .purple_btn {
   background: rgb(139, 88, 143);
@@ -360,10 +360,10 @@ svg {
   transition: 0.4s;
 }
 input:checked + .slider {
-  background-color: #17a966;
+  background-color: #e71575;
 }
 input:focus + .slider {
-  box-shadow: 0 0 1px #17a966;
+  box-shadow: 0 0 1px #e71575;
 }
 input:checked + .slider:before {
   -webkit-transform: translateX(15px);
