--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -167,33 +167,42 @@ svg {
   border-color: #000;
   top: 12px;
 }
+.react-datepicker__day--disabled,
+.react-datepicker__month-text--disabled,
+.react-datepicker__quarter-text--disabled,
+.react-datepicker__year-text--disabled {
+  color: #ccc !important;
+  cursor: not-allowed;
+}
 /* End Header CSS */
 
-.popular_leadership_slider .swiper-button-prev,
-.popular_leadership_slider .swiper-button-next {
-  width: 34px;
-  height: 34px;
-  background-color: #fff;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #000;
-  border: 1px solid #ddd;
-  box-shadow: 0px 2.125px 8.5px rgba(172, 172, 172, 0.25);
-}
-.popular_leadership_slider .swiper-button-prev {
-  left: -20px;
-}
-.popular_leadership_slider .swiper-button-next {
-  right: -20px;
-}
-.popular_leadership_slider .swiper-button-prev::after,
-.popular_leadership_slider .swiper-button-next::after {
-  font-size: 12px;
-}
-.popular_leadership_slider .swiper-button-disabled {
-  opacity: 0.7 !important;
+.popular_leadership_slider {
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 34px;
+    height: 34px;
+    background-color: #fff;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    border: 1px solid #ddd;
+    box-shadow: 0px 2.125px 8.5px rgba(172, 172, 172, 0.25);
+  }
+  .swiper-button-prev {
+    left: -20px;
+  }
+  .swiper-button-next {
+    right: -20px;
+  }
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 12px;
+  }
+  .swiper-button-disabled {
+    opacity: 0.7 !important;
+  }
 }
 .welcome_slider
   .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
@@ -235,28 +244,29 @@ svg {
 }
 
 /* Home page css */
-.booking_calendar .react-datepicker__day {
-  font-size: 14px;
-  color: #313131;
-  height: 37px !important;
-}
-.booking_calendar .react-datepicker__day--keyboard-selected {
-  color: #fff;
-}
-.booking_calendar .react-datepicker__day--in-range,
-.booking_calendar
+.booking_calendar {
+  .react-datepicker__day {
+    font-size: 14px;
+    color: #313131;
+    height: 37px !important;
+  }
+  .react-datepicker__day--keyboard-selected {
+    color: #fff;
+  }
+  .react-datepicker__day--in-range,
   .react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range) {
-  background-color: #f7f7f7;
-}
-.booking_calendar .react-datepicker__day--selected,
-.booking_calendar .react-datepicker__day--range-end,
-.booking_calendar .react-datepicker__day:hover {
-  color: #fff;
-  background-color: #313131 !important;
-  border-radius: 100%;
+    background-color: #f7f7f7;
+  }
+  .react-datepicker__day--selected,
+  .react-datepicker__day--range-end,
+  .react-datepicker__day:hover {
+    color: #fff;
+    background-color: #313131 !important;
+    border-radius: 100%;
+  }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1063px) {
   .react-datepicker__day,
   .react-datepicker__day:hover,
   .react-datepicker__day--keyboard-selected {
@@ -288,42 +298,65 @@ svg {
   .react-datepicker__month {
     margin: 0 -5px 0 -5px;
   }
+  .booking_calendar {
+    .react-datepicker__week {
+      justify-content: space-between;
+    }
+    .react-datepicker__day {
+      font-size: 14px;
+      color: #313131;
+      height: 37px !important;
+      width: 37px !important;
+      flex: inherit !important;
+    }
+    .react-datepicker__day--selected,
+    .react-datepicker__day--range-end,
+    .react-datepicker__day--keyboard-selected {
+      color: #fff;
+    }
+    .react-datepicker__day--keyboard-selected {
+      border-radius: 100%;
+    }
+    .react-datepicker {
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+  }
 }
 
 /* List Page CSS */
-.class_starting_calendar .react-datepicker__day-names {
-  margin-top: 5px;
-}
-.class_starting_calendar .react-datepicker__day-name {
-  color: #a4a4a4;
-  font-size: 13px;
-  flex: 1;
-  width: auto;
-}
-.class_starting_calendar .react-datepicker__day {
-  font-size: 13px;
-  height: auto !important;
-  border-radius: 5px;
-  font-weight: 600;
-  margin-bottom: 2px;
-  margin-right: 1px;
-  margin-left: 1px;
-  width: auto;
-  flex: 1;
-}
-.class_starting_calendar
+.class_starting_calendar {
+  .react-datepicker__day-names {
+    margin-top: 5px;
+  }
+  .react-datepicker__day-name {
+    color: #a4a4a4;
+    font-size: 13px;
+    flex: 1;
+    width: auto;
+  }
+  .react-datepicker__day {
+    font-size: 13px;
+    height: auto !important;
+    border-radius: 5px;
+    font-weight: 600;
+    margin-bottom: 2px;
+    margin-right: 1px;
+    margin-left: 1px;
+    width: auto;
+    flex: 1;
+  }
   .react-datepicker__day.react-datepicker__day--in-range {
-  background-color: #ddd;
-}
-.class_starting_calendar
+    background-color: #ddd;
+  }
   .react-datepicker__day.react-datepicker__day--in-range:hover {
-  background-color: #000;
-}
-.class_starting_calendar .react-datepicker__day.react-datepicker__day--selected,
-.class_starting_calendar
+    background-color: #000;
+  }
+  .react-datepicker__day.react-datepicker__day--selected,
   .react-datepicker__day.react-datepicker__day--range-end {
-  background-color: #000;
-  color: #fff;
+    background-color: #000;
+    color: #fff;
+  }
 }
 
 /* The switch - the box around the slider */
@@ -399,17 +432,19 @@ input:checked + .slider:before {
 }
 
 @media screen and (max-width: 767px) {
-  .class_starting_calendar .react-datepicker__day-name {
-    font-size: 14px;
-  }
-  .class_starting_calendar .react-datepicker__day {
-    font-size: 16px;
-  }
-  .class_starting_calendar .react-datepicker__day-names {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
+  .class_starting_calendar {
+    .react-datepicker__day-name {
+      font-size: 14px;
+    }
+    .react-datepicker__day {
+      font-size: 16px;
+    }
+    .react-datepicker__day-names {
+      margin-left: 0;
+      margin-right: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
   .custom_scrollbar::-webkit-scrollbar {
     display: none;
