fix: Desktop similar properties slider fixing.

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -600,7 +600,8 @@ body.active {
   width: auto !important;
   height: auto !important;
 }
-.stay_slider {
+.stay_slider,
+.similar_prop_inner_pagination {
   span.swiper-pagination-bullet {
     background-color: #fff;
   }
