--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -606,3 +606,11 @@ body.active {
     background-color: #fff;
   }
 }
+.similar_prop_inner_nav.swiper-button-disabled {
+  display: none;
+}
+.book_card_offer {
+  .swiper-slide-active img {
+    transform: scale(1.2);
+  }
+}
