--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -627,21 +627,16 @@ body.active {
   top: 0;
   border-radius: 35px;
   pointer-events: none;
+  z-index: 1;
 }
-.other-services-nav button:hover span,
-.other-services-nav button.active span {
-  color: #fff;
-}
-.other-services-nav button:nth-child(1):hover ~ button:last-child::after,
 .other-services-nav button:nth-child(1).active ~ button:last-child::after {
   left: -200%;
   background-color: #224f9c;
 }
-.other-services-nav button:nth-child(2):hover ~ button:last-child::after {
+.other-services-nav button:nth-child(2).active ~ button:last-child::after {
   left: -100%;
   background-color: #224f9c;
 }
-.other-services-nav button:nth-child(3):hover::after {
+.other-services-nav button:nth-child(3).active::after {
   background-color: #224f9c;
-  left: 0 !important;
 }
