design: 3 more sections added.

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -626,6 +626,7 @@ body.active {
   width: auto !important;
   height: auto !important;
 }
+.reason_slider,
 .stay_slider,
 .similar_prop_inner_pagination {
   span.swiper-pagination-bullet {
