--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -649,7 +649,8 @@ body.active {
   }
 }
 
-.other-services-nav button:last-child::after {
+.other-services-nav button:last-child::after,
+.services-packages-tab button:last-child::after {
   content: '';
   width: 100%;
   height: 100%;
@@ -673,6 +674,20 @@ body.active {
 }
 .other-services-nav button:nth-child(3).active::after {
   background-color: #224f9c;
+}
+.services-packages-tab button:nth-child(1).active ~ button:last-child::after {
+  left: -200%;
+  background-color: #ef5da8;
+  box-shadow: 0px 4px 24px rgba(239, 93, 168, 0.33);
+}
+.services-packages-tab button:nth-child(2).active ~ button:last-child::after {
+  left: -100%;
+  background-color: #ef5da8;
+  box-shadow: 0px 4px 24px rgba(239, 93, 168, 0.33);
+}
+.services-packages-tab button:nth-child(3).active::after {
+  background-color: #ef5da8;
+  box-shadow: 0px 4px 24px rgba(239, 93, 168, 0.33);
 }
 
 .lightBox_gallery_slider {
