--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -438,6 +438,10 @@ input:checked + .slider:before {
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
   transform: translateX(15px);
+  background-image: url('/icons/check-lg.svg');
+  background-size: 13px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 /* Rounded sliders */
 .slider.round {
