--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -693,6 +693,21 @@ body.active {
   background-color: #ef5da8;
   box-shadow: 0px 4px 24px rgba(239, 93, 168, 0.33);
 }
+.celebrity-other-services-nav
+  button:nth-child(1).active
+  ~ button:last-child::after {
+  left: -200%;
+  background-color: #ef5da8;
+}
+.celebrity-other-services-nav
+  button:nth-child(2).active
+  ~ button:last-child::after {
+  left: -100%;
+  background-color: #ef5da8;
+}
+.celebrity-other-services-nav button:nth-child(3).active::after {
+  background-color: #ef5da8;
+}
 
 .lightBox_gallery_slider {
   .swiper-button-prev,
@@ -753,5 +768,11 @@ body.active {
         background-color: rgb(231 22 118 / 20%);
       }
     }
+  }
+}
+
+@media only screen and (min-width: 1240px) {
+  .main-banner-wrapper {
+    padding-left: calc(50vw - 1215px / 2);
   }
 }
