--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -8,6 +8,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  overflow-x: hidden;
 }
 .cityyy::-webkit-scrollbar {
   display: none;
@@ -16,6 +17,7 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none; /* Firefox */
 }
+
 @font-face {
   font-family: 'Kostania';
   src: url('/public/fonts/Kostania-Bold.ttf');
